Fixed add new lane button's box flow on horizontal scroll.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -72,6 +72,10 @@ input {
     align-self: start;
 }
 
+#board > .add-new {
+    white-space: nowrap;
+}
+
 .add-new > form {
     display: inline-block;
     border: none;
